Fixed layout issue

--- a/css/index.css
+++ b/css/index.css
@@ -8269,3 +8269,6 @@ h5 {
 .table {
   margin-bottom: 0px;
 }
+.top-content {
+  margin-left: 0px;
+}
