--- a/less/layout.less
+++ b/less/layout.less
@@ -31,3 +31,7 @@ h1, h2, h3, h4, h5 {
 .table {
     margin-bottom: 0px;
 }
+
+.top-content {
+    margin-left: 0px;
+}
